--- a/bache/articles/templates/master.html
+++ b/bache/articles/templates/master.html
@@ -9,17 +9,15 @@
 </head>
 <body>
 
-    <div class="header">
-        <ul>
-            <li>Home</li>
-            <li>Article</li>
-            <li>Contact</li>
-        </ul>
+    {% include "header.html" %}
+
+    <div id="main">
+        <div class="container">
+            {% block content %}
+            {% endblock %}
+        </div>
     </div>
 
-
-    {% block content %}
-    {% endblock %}
 </body>
 </html>
 {% endspaceless %}
