--- a/bache/articles/templates/edit.html
+++ b/bache/articles/templates/edit.html
@@ -3,13 +3,20 @@
 
 {% block content %}
     <h2>Edit Article :</h2>
-    <form action="{% url 'articles:article.edit' article_id %}" method="POST">
+    <form action="{% url 'articles:article.edit' form.instance.pk %}" method="POST">
         {% csrf_token %}
         <div class="form-group">
             {{ form.title.label_tag }}
             {{ form.title }}
             <div class="invalid-feedback">
             {{ form.title.errors | first }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form.categories.label_tag }}
+            {{ form.categories }}
+            <div class="invalid-feedback">
+            {{ form.categories.errors | first }}
             </div>
         </div>
         <div class="form-group">
@@ -21,7 +28,7 @@
         </div>
         <div class="form-group">
             <label for="published_at">published at : </label>
-            <input type="date" name="published_at" class="form-control {% if form.published_at.errors %}is-invalid{% endif %}" id="published_at" value="{{ form.published_at.value | date:'Y-m-d' }}">
+            <input type="datetime-local" name="published_at" class="form-control {% if form.published_at.errors %}is-invalid{% endif %}" id="published_at" value="{{ form.published_at.value | date:'Y-m-d' }}">
             <div class="invalid-feedback">
             {{ form.published_at.errors | first  }}
             </div>
