--- a/bache/articles/templates/index.html
+++ b/bache/articles/templates/index.html
@@ -15,11 +15,11 @@
         {% endfor %}
     </ul>
 
-    {% if articles.has_other_pages %}
+    {% if is_paginated %}
         <ul class="pagination">
-            {% if articles.has_previous %}
+            {% if page_obj.has_previous %}
                 <li class="page-item">
-                    <a class="page-link" href="/articles?page={{ articles.previous_page_number }}" aria-label="Previous">
+                    <a class="page-link" href="{{ request.path }}?page={{ page_obj.previous_page_number }}" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
@@ -33,7 +33,7 @@
 
 
             {% for i in paginator.page_range %}
-                {% if articles.number == i %}
+                {% if page_obj.number == i %}
                     <li class="page-item disabled ">
                         <a class="page-link" href="#">
                         {{ i }}
@@ -41,7 +41,7 @@
                     </li>
                 {% else %}
                     <li class="page-item">
-                        <a class="page-link" href="/articles?page={{ i }}">
+                        <a class="page-link" href="{{ request.path }}?page={{ i }}">
                         {{ i }}
                         </a>
                     </li>
@@ -49,9 +49,9 @@
             {% endfor %}
 
 
-            {% if articles.has_next %}
+            {% if page_obj.has_next %}
                 <li class="page-item">
-                    <a class="page-link" href="/articles?page={{ articles.next_page_number }}">
+                    <a class="page-link" href="{{ request.path }}?page={{ page_obj.next_page_number }}">
                         <span aria-hidden="true">&raquo;</span>
                     </a>
                 </li>
