--- a/bache/articles/templates/send.html
+++ b/bache/articles/templates/send.html
@@ -1,15 +1,23 @@
 {% extends "master.html" %}
+{% load i18n %}
 
 
 {% block content %}
-    <h2>Send Article :</h2>
+    <h2>{% translate 'Send Article :' %}</h2>
     <form action="{% url 'articles:article.send' %}" method="POST">
         {% csrf_token %}
         <div class="form-group">
-            <label for="title">title : </label>
+            <label for="title">{% translate 'title :' %}</label>
             <input type="text" name="title" class="form-control {% if form.title.errors %}is-invalid{% endif %}" id="title">
             <div class="invalid-feedback">
             {{ form.title.errors | first }}
+            </div>
+        </div>
+        <div class="form-group">
+            {{ form.categories.label_tag }}
+            {{ form.categories }}
+            <div class="invalid-feedback">
+            {{ form.categories.errors | first }}
             </div>
         </div>
         <div class="form-group">
@@ -21,7 +29,7 @@
         </div>
         <div class="form-group">
             <label for="published_at">published at : </label>
-            <input type="date" name="published_at" class="form-control {% if form.published_at.errors %}is-invalid{% endif %}" id="published_at">
+            <input type="datetime-local" name="published_at" class="form-control {% if form.published_at.errors %}is-invalid{% endif %}" id="published_at" >
             <div class="invalid-feedback">
             {{ form.published_at.errors | first  }}
             </div>
